Replace sidebar quicklinks with see also

--- a/files/en-us/glossary/accessibility_tree/index.html
+++ b/files/en-us/glossary/accessibility_tree/index.html
@@ -29,14 +29,13 @@ tags:
 
 <p>While still in draft form within the Web Incubator Community Group, the <strong><a href="https://wicg.github.io/aom/explainer.html">Accessibility Object Model</a> (AOM)</strong> intends to incubate APIs that make it easier to express accessibility semantics and potentially allow read access to the computed accessibility tree.</p>
 
-<section id="Quick_links">
-<ol>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
+<h2 id="see_also">See also</h2>
 
-  <ol>
+<ul>
+ <li><a href="/en-US/docs/Glossary">Glossary</a>
+  <ul>
    <li>{{Glossary("Accessibility")}}</li>
    <li>{{Glossary("ARIA")}}</li>
-  </ol>
+  </ul>
  </li>
-</ol>
-</section>
+</ul>
