--- a/files/en-us/glossary/character_set/index.html
+++ b/files/en-us/glossary/character_set/index.html
@@ -12,19 +12,17 @@ tags:
 
 <p>If a character set is used incorrectly (For example, Unicode for an article encoded in Big5), you may see nothing but broken characters, which are called {{Interwiki("wikipedia", "Mojibake")}}.</p>
 
-<section id="Quick_links">
-<ol>
- <li>Wikipedia articles
-  <ol>
-   <li>{{Interwiki("wikipedia", "Character encoding")}}</li>
-   <li>{{Interwiki("wikipedia", "Mojibake")}}</li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{Glossary("Character")}}</li>
-   <li>{{Glossary("Unicode")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+
+<h2 id="see_also">See also</h2>
+
+<ul>
+   <li>{{Interwiki("wikipedia", "Character encoding")}} (Wikipedia)</li>
+   <li>{{Interwiki("wikipedia", "Mojibake")}} (Wikipedia)</li>
+   <li><a href="/en-US/docs/Glossary">Glossary</a>
+      <ul>
+        <li>{{Glossary("Character")}}</li>
+        <li>{{Glossary("Unicode")}}</li>
+      </ul>
+   </li>
+</ul>
+
