--- a/files/en-us/glossary/cors-safelisted_response_header/index.html
+++ b/files/en-us/glossary/cors-safelisted_response_header/index.html
@@ -36,22 +36,18 @@ tags:
 
 <pre class="brush: plain">Access-Control-Expose-Headers: X-Custom-Header, Content-Encoding</pre>
 
-<section id="Quick_links">
-<ol>
- <li>See also
-  <ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
    <li><a href="/en-US/docs/Web/HTTP">HTTP</a></li>
    <li><a href="/en-US/docs/Web/HTTP/Headers">HTTP headers</a></li>
    <li>{{HTTPHeader("Access-Control-Expose-Headers")}}</li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{Glossary("CORS")}}</li>
-   <li>{{Glossary("CORS-safelisted_request_header", "CORS-safelisted request header")}}</li>
-   <li>{{Glossary("Forbidden header name")}}</li>
-   <li>{{Glossary("Request header")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+    <li><a href="/en-US/docs/Glossary">Glossary</a>
+      <ul>
+      <li>{{Glossary("CORS")}}</li>
+      <li>{{Glossary("CORS-safelisted_request_header", "CORS-safelisted request header")}}</li>
+      <li>{{Glossary("Forbidden header name")}}</li>
+      <li>{{Glossary("Request header")}}</li>
+      </ul>
+    </li>
+</ul>
