--- a/files/en-us/glossary/cryptographic_hash_function/index.html
+++ b/files/en-us/glossary/cryptographic_hash_function/index.html
@@ -19,7 +19,8 @@ tags:
 
 <p>Cryptographic hash functions such as MD5 and SHA-1 are considered broken, as attacks have been found that significantly reduce their collision resistance.</p>
 
-<section id="Quick_links">
+<h2 id="see_also">See also</h2>
+
 <ul>
  <li>{{interwiki("wikipedia", "Cryptographic hash function", "Cryptographic hash function")}} on Wikipedia</li>
  <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
@@ -28,4 +29,4 @@ tags:
   </ul>
  </li>
 </ul>
-</section>
+
