--- a/files/en-us/glossary/cryptography/index.html
+++ b/files/en-us/glossary/cryptography/index.html
@@ -11,29 +11,26 @@ tags:
 
 <p>More than just <strong>data confidentiality</strong>, cryptography also tackles <strong>identification</strong>, <strong>authentication</strong>, <strong>non-repudiation</strong>, and <strong>data integrity</strong>. Therefore it also studies usage of cryptographic methods in context, <strong>cryptosystems</strong>.</p>
 
-<section id="Quick_links">
-<ol>
- <li>General knowledge
-  <ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
    <li>{{Interwiki("wikipedia", "Cryptography")}} on Wikipedia</li>
    <li><a href="/en-US/docs/Web/Security/Information_Security_Basics">Information security tutorial</a></li>
    <li><a href="/en-US/docs/Archive/Security/Encryption_and_Decryption">Encrypting and Decrypting</a></li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
-  <ol>
-   <li>{{Glossary("Block cipher mode of operation")}}</li>
-   <li>{{Glossary("Cipher")}}</li>
-   <li>{{Glossary("Ciphertext")}}</li>
-   <li>{{Glossary("Cipher suite")}}</li>
-   <li>{{Glossary("Cryptanalysis")}}</li>
-   <li>{{Glossary("Cryptography")}}</li>
-   <li>{{Glossary("Decryption")}}</li>
-   <li>{{Glossary("Encryption")}}</li>
-   <li>{{Glossary("Key")}}</li>
-   <li>{{Glossary("Plaintext")}}</li>
-   <li>{{Glossary("Public-key cryptography")}}</li>
-   <li>{{Glossary("Symmetric-key cryptography")}}</li>
-  </ol>
- </li>
-</ol></section>
+    <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
+      <ul>
+      <li>{{Glossary("Block cipher mode of operation")}}</li>
+      <li>{{Glossary("Cipher")}}</li>
+      <li>{{Glossary("Ciphertext")}}</li>
+      <li>{{Glossary("Cipher suite")}}</li>
+      <li>{{Glossary("Cryptanalysis")}}</li>
+      <li>{{Glossary("Cryptography")}}</li>
+      <li>{{Glossary("Decryption")}}</li>
+      <li>{{Glossary("Encryption")}}</li>
+      <li>{{Glossary("Key")}}</li>
+      <li>{{Glossary("Plaintext")}}</li>
+      <li>{{Glossary("Public-key cryptography")}}</li>
+      <li>{{Glossary("Symmetric-key cryptography")}}</li>
+      </ul>
+    </li>
+</ul>
