--- a/files/en-us/glossary/database/index.html
+++ b/files/en-us/glossary/database/index.html
@@ -14,13 +14,15 @@ tags:
 
 <p>Browsers also have their own database system called {{glossary("IndexedDB")}}.</p>
 
-<section id="Quick_links">
-<ol>
- <li>{{Interwiki("wikipedia", "Database")}} on Wikipedia
-  <ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
+ <li>{{Interwiki("wikipedia", "Database")}} on Wikipedia</li>
+ <li>Glossary
+  <ul>
    <li>{{Glossary("IndexedDB")}}</li>
    <li>{{Glossary("SQL")}}</li>
-  </ol>
+  </ul>
  </li>
-</ol>
-</section>
+</ul>
+
