--- a/files/en-us/glossary/dom/index.html
+++ b/files/en-us/glossary/dom/index.html
@@ -12,18 +12,19 @@ tags:
 
 <p>DOM was not originally specified—it came about when browsers began implementing {{Glossary("JavaScript")}}. This legacy DOM is sometimes called DOM 0. Today, the WHATWG maintains the DOM Living Standard.</p>
 
-<section id="Quick_links">
-<ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
  <li>{{interwiki("wikipedia", "Document_Object_Model", "The Document Object Model")}} on Wikipedia</li>
  <li><a href="/en-US/docs/Web/API/Document_Object_Model">The DOM documentation on MDN</a></li>
  <li><a href="https://dom.spec.whatwg.org/" rel="external">The DOM Standard</a></li>
  <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
+  <ul>
    <li>{{Glossary("API")}}</li>
    <li>{{Glossary("HTML")}}</li>
    <li>{{Glossary("XML")}}</li>
    <li>{{Glossary("World Wide Web")}}</li>
-  </ol>
+  </ul>
  </li>
-</ol>
-</section>
+</ul>
+
