--- a/files/en-us/glossary/endianness/index.html
+++ b/files/en-us/glossary/endianness/index.html
@@ -20,24 +20,15 @@ tags:
  <li><em>mixed-endian</em> (historic and very rare): <code>0x34 0x12 0x78 0x56</code></li>
 </ul>
 
-<section id="Quick_links">
-<ol>
- <li>See also
-  <ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
    <li>{{jsxref("ArrayBuffer")}}</li>
    <li>{{jsxref("DataView")}}</li>
    <li><a href="/en-US/docs/Web/JavaScript/Typed_arrays">Typed Arrays</a></li>
-  </ol>
- </li>
- <li>Wikipedia articles
-  <ol>
-   <li>{{Interwiki("wikipedia", "Endianness")}}</li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{Glossary("Data structure")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+   <li>{{Interwiki("wikipedia", "Endianness")}} (Wikipedia)</li>
+   <li>{{Glossary("Data structure")}} (Glossary)</li>
+</ul>
+
+
+
