--- a/files/en-us/glossary/favicon/index.html
+++ b/files/en-us/glossary/favicon/index.html
@@ -15,14 +15,14 @@ tags:
 
 <p>They are used to improve user experience and enforce brand consistency. When a familiar icon is seen in the browser's address bar, for example, it helps users know they are in the right place.</p>
 
-<section id="Quick_links">
-<ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
  <li>{{interwiki("wikipedia", "Favicon", "Favicon")}} on Wikipedia</li>
  <li>Tools
-  <ol>
+  <ul>
    <li><a href="https://favicon.io/">Free favicon generator</a></li>
    <li><a href="https://www.favicon-generator.org/">Favicon.ico and &amp; app icon generator</a></li>
-  </ol>
+  </ul>
  </li>
-</ol>
-</section>
+</ul>
