--- a/files/en-us/glossary/first-class_function/index.html
+++ b/files/en-us/glossary/first-class_function/index.html
@@ -96,8 +96,9 @@ sayHello()();
 
 <p>We are using double parentheses <code>()()</code> to invoke the returned function as well.</p>
 
-<section id="Quick_links">
-<ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
  <li>{{Interwiki("wikipedia", "First-class_function", "First-class functions")}} on Wikipedia</li>
  <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
   <ul>
@@ -106,5 +107,5 @@ sayHello()();
    <li>{{glossary("Variable")}}</li>
   </ul>
  </li>
-</ol>
-</section>
+</ul>
+
