--- a/files/en-us/glossary/fps/index.html
+++ b/files/en-us/glossary/fps/index.html
@@ -11,18 +11,9 @@ tags:
 
 <p>Movies generally have a frame rate of 24 fps. They are able to have fewer frames per second because the illusion of life is created with motion blurs. When moving on a computer screen there are no motion blurs (unless you are animating an image <a href="/en-US/docs/Web/CSS/CSS_Images/Implementing_image_sprites_in_CSS">sprite</a> with motion blurs).</p>
 
-<section id="Quick_links">
-<ol>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{glossary("FPS")}}</li>
-  </ol>
- </li>
- <li>Wikipedia articles
-  <ol>
-   <li>{{Interwiki("wikipedia", "Frame rate")}}</li>
-  </ol>
- </li>
+<h2 id="see_also">See also</h2>
 
-</ol>
-</section>
+<ul>
+ <li>{{Interwiki("wikipedia", "Frame rate")}} (Wikipedia)</li>  
+ <li>{{glossary("FPS")}} (Glossary)</li>
+</ul>
