--- a/files/en-us/glossary/global_object/index.html
+++ b/files/en-us/glossary/global_object/index.html
@@ -53,10 +53,10 @@ window.greeting(); // It is the same as the normal invoking: greeting();
    console.log("Hi!");
 }</pre>
 
-<section id="Quick_links">
+<h2 id="see_also">See also</h2>
+
 <ul>
  <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
-
   <ul>
    <li>{{glossary("global scope")}}</li>
    <li>{{glossary("object")}}</li>
@@ -66,4 +66,4 @@ window.greeting(); // It is the same as the normal invoking: greeting();
  <li>{{domxref("WorkerGlobalScope")}}</li>
  <li><code><a href="https://nodejs.org/api/globals.html#globals_global">global</a></code></li>
 </ul>
-</section>
+
