--- a/files/en-us/glossary/grid/index.html
+++ b/files/en-us/glossary/grid/index.html
@@ -56,17 +56,16 @@ tags:
 
 <p>{{ EmbedLiveSample('example', '500', '330') }}</p>
 
-<section id="Quick_links">
-<ol>
- <li>CSS Grid Layout Guide:<br>
-  <em><a href="/en-US/docs/Web/CSS/CSS_Grid_Layout/Basic_Concepts_of_Grid_Layout">Basic concepts of grid layout</a></em></li>
- <li>Property reference
-  <ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
+ <li><a href="/en-US/docs/Web/CSS/CSS_Grid_Layout/Basic_Concepts_of_Grid_Layout">Basic concepts of grid layout</a></li>
+ <li>Property reference:
+  <ul>
    <li>{{cssxref("grid-template-columns")}}</li>
    <li>{{cssxref("grid-template-rows")}}</li>
    <li>{{cssxref("grid")}}</li>
    <li>{{cssxref("grid-template")}}</li>
-  </ol>
+  </ul>
  </li>
-</ol>
-</section>
+</ul>
