--- a/files/en-us/glossary/grid_tracks/index.html
+++ b/files/en-us/glossary/grid_tracks/index.html
@@ -56,17 +56,17 @@ tags:
 
 <p>Tracks created in the implicit grid are auto-sized by default, however you can define a size for these tracks using the {{cssxref("grid-auto-rows")}} and {{cssxref("grid-auto-columns")}} properties.</p>
 
-<section id="Quick_links">
-<ol>
- <li>CSS Grid Layout Guide: <br>
- <em><a href="/en-US/docs/Web/CSS/CSS_Grid_Layout/Basic_Concepts_of_Grid_Layout">Basic concepts of grid layout</a></em></li>
+<h2 id="see_also">See also</h2>
+
+<ul>
+ <li><a href="/en-US/docs/Web/CSS/CSS_Grid_Layout/Basic_Concepts_of_Grid_Layout">Basic concepts of grid layout</a></li>
  <li><a href="https://drafts.csswg.org/css-grid/#grid-track-concept">Definition of Grid Tracks in the CSS Grid Layout specification</a></li>
  <li>Property reference
-  <ol>
+  <ul>
    <li>{{cssxref("grid-template-columns")}}</li>
    <li>{{cssxref("grid-template-rows")}}</li>
    <li>{{cssxref("grid")}}</li>
    <li>{{cssxref("grid-template")}}</li>
-  </ol>
+  </ul>
  </li>
-</ol></section>
+</ul>
