--- a/files/en-us/glossary/hotlink/index.html
+++ b/files/en-us/glossary/hotlink/index.html
@@ -9,17 +9,9 @@ tags:
 
 <p>The practice is often frowned upon as it can cause unwanted bandwidth usage on the website hosting the linked-to object, and copyright concerns — it is considered stealing when it is done without permission.</p>
 
-<section id="Quick_links">
-<ol>
- <li>General knowledge
-  <ol>
-   <li>{{Interwiki("wikipedia", "Inline linking", "Hotlink")}} on Wikipedia</li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
-  <ol>
-   <li>{{glossary("Hyperlink")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+<h2 id="see_also">See also</h2>
+
+<ul>
+  <li>{{Interwiki("wikipedia", "Inline linking", "Hotlink")}} on Wikipedia</li>
+  <li>{{glossary("Hyperlink")}} (Glossary)</li>
+</ul>
