--- a/files/en-us/glossary/http_3/index.html
+++ b/files/en-us/glossary/http_3/index.html
@@ -10,20 +10,17 @@ tags:
 
 <p>The major point of HTTP/3 is that it uses a new {{glossary("UDP")}} protocol named QUIC, instead of {{glossary("TCP")}}.</p>
 
-<section id="Quick_links">
-<ol>
- <li>General knowledge
-  <ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
    <li><a href="/en-US/docs/Web/HTTP">HTTP on MDN</a></li>
    <li>{{interwiki("wikipedia", "HTTP/3", "HTTP/3")}} on Wikipedia</li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{glossary("HTTP")}}</li>
-   <li>{{glossary("HTTP 2")}}</li>
-   <li>{{glossary("Latency")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+    <li><a href="/en-US/docs/Glossary">Glossary</a>
+      <ul>
+      <li>{{glossary("HTTP")}}</li>
+      <li>{{glossary("HTTP 2")}}</li>
+      <li>{{glossary("Latency")}}</li>
+      </ul>
+    </li>    
+</ul>
+
