--- a/files/en-us/glossary/iife/index.html
+++ b/files/en-us/glossary/iife/index.html
@@ -121,23 +121,17 @@ for (let i = 0; i &lt; 2; i++) {
 console.log(i); // Uncaught ReferenceError: i is not defined.</pre>
 
 <p>When clicked, these buttons alert 0 and 1.</p>
-<section id="Quick_links">
-<ol>
- <li>Learn about it
-  <ol>
-   <li><a href="/en-US/docs/Web/JavaScript/A_re-introduction_to_JavaScript#Functions">Quick example</a> (at the end of the "Functions" section, right before "Custom objects")</li>
-  </ol>
- </li>
- <li>Wikipedia articles
-  <ol>
-   <li>{{interwiki("wikipedia", "Immediately-invoked function expression", "IIFE")}}</li>
-  </ol>
- </li>
+
+<h2 id="see_also">See also</h2>
+
+<ul>
+ <li><a href="/en-US/docs/Web/JavaScript/A_re-introduction_to_JavaScript#Functions">Quick example</a> (at the end of the "Functions" section, right before "Custom objects")</li>
+ <li>{{interwiki("wikipedia", "Immediately-invoked function expression", "IIFE")}} (Wikipedia)</li>
  <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
+  <ul>
    <li>{{Glossary("Function")}}</li>
    <li>{{Glossary("Self-Executing Anonymous Function")}}</li>
-  </ol>
+  </ul>
  </li>
-</ol>
-</section>
+</ul>
+
