--- a/files/en-us/glossary/ligature/index.html
+++ b/files/en-us/glossary/ligature/index.html
@@ -10,8 +10,8 @@ tags:
 
 <p>You can implement ligatures in your webpage with {{cssxref("font-variant-ligatures")}}.</p>
 
-<section id="Quick_links">
- <ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
   <li>{{interwiki("wikipedia", "Typographic ligature", "Ligature")}} on Wikipedia</li>
- </ol>
-</section>
+</ul>
