--- a/files/en-us/glossary/local_variable/index.html
+++ b/files/en-us/glossary/local_variable/index.html
@@ -17,12 +17,8 @@ function fun(){
 }
 </pre>
 
-<section id="Quick_links">
-<ol>
- <li>General knowledge
-  <ol>
-   <li>{{interwiki("wikipedia", "Local variable", "Local variable")}} on Wikipedia</li>
-  </ol>
- </li>
-</ol>
-</section>
+<h2 id="see_also">See also</h2>
+
+<ul>
+  <li>{{interwiki("wikipedia", "Local variable", "Local variable")}} on Wikipedia</li>
+</ul>
