--- a/files/en-us/glossary/loop/index.html
+++ b/files/en-us/glossary/loop/index.html
@@ -70,17 +70,14 @@ while(i &lt; 5){
  <li>The code block will continue to run as long as the variable (i) is less than 5.</li>
 </ul>
 
-<section id="Quick_links">
-<ol>
- <li>General knowledge
-  <ol>
-   <li>{{interwiki("wikipedia", "Control_flow#Loops","Control flow")}} on Wikipedia</li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
-  <ol>
-   <li>{{Glossary("Loop")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+<h2 id="see_also">See also</h2>
+
+<ul>
+  <li>{{interwiki("wikipedia", "Control_flow#Loops","Control flow")}} on Wikipedia</li>
+  <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
+    <ul>
+    <li>{{Glossary("Loop")}}</li>
+    </ul>
+  </li>  
+</ul>
+
