--- a/files/en-us/glossary/ltr/index.html
+++ b/files/en-us/glossary/ltr/index.html
@@ -18,7 +18,8 @@ tags:
  <li><a href="/en-US/docs/Web/Localization">Localization and internationalization</a></li>
 </ul>
 
-<section id="Quick_links">
+<h2 id="see_also">See also</h2>
+
 <ul>
  <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
 
@@ -43,4 +44,4 @@ tags:
   </ul>
  </li>
 </ul>
-</section>
+
