--- a/files/en-us/glossary/markup/index.html
+++ b/files/en-us/glossary/markup/index.html
@@ -22,16 +22,16 @@ tags:
  <dd>Labels sections of documents as to how the program should handle them. For example, the HTML {{HTMLElement("td")}} defines a cell in a HTML table.</dd>
 </dl>
 
-<section id="Quick_links">
-<ol>
- <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
+<h2 id="see_also">See also</h2>
 
-  <ol>
+<ul>
+ <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
+  <ul>
    <li>{{Glossary("HTML")}}</li>
    <li>{{Glossary("XHTML")}}</li>
    <li>{{Glossary("XML")}}</li>
    <li>{{Glossary("SVG")}}</li>
-  </ol>
+  </ul>
  </li>
-</ol>
-</section>
+</ul>
+
