--- a/files/en-us/glossary/php/index.html
+++ b/files/en-us/glossary/php/index.html
@@ -43,18 +43,19 @@ tags:
  echo $email;
 ?&gt;</pre>
 
-<section id="Quick_links">
-<ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
  <li><a href="https://php.net/">Official website</a></li>
  <li>{{Interwiki("wikipedia", "PHP")}} on Wikipedia</li>
  <li><a href="https://en.wikibooks.org/wiki/PHP_Programming">PHP</a> on Wikibooks</li>
  <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
-  <ol>
+  <ul>
    <li>{{Glossary("Java")}}</li>
    <li>{{Glossary("JavaScript")}}</li>
    <li>{{Glossary("Python")}}</li>
    <li>{{Glossary("Ruby")}}</li>
-  </ol>
+  </ul>
  </li>
-</ol>
-</section>
+</ul>
+
