--- a/files/en-us/glossary/public-key_cryptography/index.html
+++ b/files/en-us/glossary/public-key_cryptography/index.html
@@ -17,14 +17,14 @@ tags:
 
 <p>Commonly used public-key cryptosystems are RSA (for both signing and encryption), DSA (for signing) and Diffie-Hellman (for key agreement).</p>
 
-<section id="Quick_links">
-<ul>
- <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
+<h2 id="see_also">See also</h2>
 
+<ul>
+ <li><a href="/en-US/docs/Web/API/Web_Crypto_API">Web Crypto API</a></li>
+ <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
   <ul>
    <li>{{Glossary("Symmetric-key cryptography")}}</li>
   </ul>
  </li>
- <li><a href="/en-US/docs/Web/API/Web_Crypto_API">Web Crypto API</a></li>
 </ul>
-</section>
+
