--- a/files/en-us/glossary/rtl/index.html
+++ b/files/en-us/glossary/rtl/index.html
@@ -12,10 +12,10 @@ tags:
 
 <p>The opposite of RTL, LTR (Left To Right) is used in other languages, including English (<code>en</code>, <code>en-US</code>, <code>en-GB</code>, etc.), Spanish (<code>es</code>), and French (<code>fr</code>).</p>
 
-<section id="Quick_links">
+<h2 id="see_also">See also</h2>
+
 <ul>
  <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
-
   <ul>
    <li>{{Glossary("Localization")}}</li>
    <li>{{Glossary("LTR", "LTR (Left to Right)")}}</li>
@@ -23,4 +23,4 @@ tags:
   </ul>
  </li>
 </ul>
-</section>
+
