--- a/files/en-us/glossary/scroll_container/index.html
+++ b/files/en-us/glossary/scroll_container/index.html
@@ -9,7 +9,8 @@ tags:
 
 <p>The scroll container allows the user to scroll through parts of the overflow region that would otherwise be clipped and hidden from view. The visible part of the scroll container is referred to as the {{glossary("Scrollport", "scrollport")}}.</p>
 
-<section id="Quick_links">
+<h2 id="see_also">See also</h2>
+
 <ul>
  <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>:
 
@@ -24,4 +25,4 @@ tags:
   </ul>
  </li>
 </ul>
-</section>
+
