--- a/files/en-us/glossary/scrollport/index.html
+++ b/files/en-us/glossary/scrollport/index.html
@@ -7,7 +7,8 @@ tags:
 ---
 <p>The <strong>scrollport</strong> is the visual viewport of a {{glossary("Scroll container", "scroll container")}} in a document. A scroll container is created by applying <code>overflow: scroll</code> to a container, or <code>overflow: auto</code> when there is enough content to cause overflow. The scrollport coincides with the padding box of that container and represents the content that can be seen as the box is scrolled.</p>
 
-<section id="Quick_links">
+<h2 id="see_also">See also</h2>
+
 <ul>
  <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>:
   <ul>
@@ -21,4 +22,4 @@ tags:
   </ul>
  </li>
 </ul>
-</section>
+
