--- a/files/en-us/glossary/second-level_domain/index.html
+++ b/files/en-us/glossary/second-level_domain/index.html
@@ -14,21 +14,16 @@ tags:
 
 <p>As another example, in <code>developer.mozilla.org</code>, the <code>developer</code> subdomain is used to specify that the subdomain contains the developer section of the Mozilla website.</p>
 
-<section id="Quick_links">
-<ol>
- <li>Wikipedia articles
-  <ol>
-   <li>{{Interwiki("wikipedia", "Second-level domain", "SLD")}}</li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{Glossary("DNS")}}</li>
-   <li>{{Glossary("Domain")}}</li>
-   <li>{{Glossary("Domain name")}}</li>
-   <li>{{Glossary("TLD")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+<h2 id="see_also">See also</h2>
 
+<ul>
+  <li>{{Interwiki("wikipedia", "Second-level domain", "SLD")}} (Wikipedia)</li>
+  <li><a href="/en-US/docs/Glossary">Glossary</a>
+    <ul>
+     <li>{{Glossary("DNS")}}</li>
+     <li>{{Glossary("Domain")}}</li>
+     <li>{{Glossary("Domain name")}}</li>
+     <li>{{Glossary("TLD")}}</li>
+    </ul>
+   </li>
+</ul>
