--- a/files/en-us/glossary/static_method/index.html
+++ b/files/en-us/glossary/static_method/index.html
@@ -27,23 +27,15 @@ tags:
 
 myNotification.close();</pre>
 
-<section id="Quick_links">
-<ol>
- <li>General knowledge
-  <ol>
-   <li><a href="https://www.techopedia.com/definition/24034/static-method">Static Method</a> on Techopedia</li>
-  </ol>
- </li>
- <li>JavaScript Reference
-  <ol>
-   <li><a href="/en-US/docs/Web/JavaScript/Reference/Classes/static">static</a></li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
-  <ol>
-   <li>{{Glossary("Object")}}</li>
-   <li>{{Glossary("Method")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+<h2 id="see_also">See also</h2>
+
+<ul>
+  <li><a href="https://www.techopedia.com/definition/24034/static-method">Static Method</a> on Techopedia</li>
+  <li><a href="/en-US/docs/Web/JavaScript/Reference/Classes/static">static</a></li>
+  <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
+    <ul>
+      <li>{{Glossary("Object")}}</li>
+      <li>{{Glossary("Method")}}</li>
+    </ul>
+  </li>
+</ul>
