--- a/files/en-us/glossary/strict_mode/index.html
+++ b/files/en-us/glossary/strict_mode/index.html
@@ -10,14 +10,14 @@ tags:
 
 <p>Strict mode for an entire script is invoked by including the statement <code>"use strict";</code> before any other statements.</p>
 
-<section id="Quick_links">
-<ol>
- <li><a href="/en-US/docs/Web/JavaScript/Reference/Strict_mode">strict mode</a></li>
- <li><a href="/en-US/docs/Web/JavaScript/Reference/Strict_mode/Transitioning_to_strict_mode">transitioning to strict mode</a></li>
+<h2 id="see_also">See also</h2>
+
+<ul>
+ <li><a href="/en-US/docs/Web/JavaScript/Reference/Strict_mode">Strict mode</a></li>
+ <li><a href="/en-US/docs/Web/JavaScript/Reference/Strict_mode/Transitioning_to_strict_mode">Transitioning to strict mode</a></li>
  <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
+  <ul>
    <li>{{Glossary("Sloppy mode")}}</li>
-  </ol>
+  </ul>
  </li>
-</ol>
-</section>
+</ul>
