--- a/files/en-us/glossary/thread/index.html
+++ b/files/en-us/glossary/thread/index.html
@@ -16,19 +16,15 @@ tags:
 
 <p>Overall it can be observed these threads within our operating system are extremely helpful. They help minimize the context switching time, enables more efficient communication and allows further use of the multiprocessor architecture.</p>
 
-<section id="Quick_links">
-<ol>
- <li>See also
-  <ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
    <li><a href="/en-US/docs/Learn/JavaScript/Asynchronous">Asynchronous JavaScript</a></li>
    <li><a href="/en-US/docs/Web/API/Web_Workers_API">Web worker API</a></li>
    <li><a href="/en-US/docs/Web/API/Service_Worker_API">Service worker API</a></li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{Glossary("Main thread")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+   <li><a href="/en-US/docs/Glossary">Glossary</a>
+     <ul>
+       <li>{{Glossary("Main thread")}}</li>
+     </ul>
+   </li>
+</ul>
