--- a/files/en-us/glossary/type/index.html
+++ b/files/en-us/glossary/type/index.html
@@ -14,11 +14,13 @@ tags:
 
 <p>If you are unsure of the type of a value, you can use the <a href="/en-US/docs/Web/JavaScript/Reference/Operators/typeof"><code>typeof</code></a> operator.</p>
 
-<section id="Quick_links">
-<ol>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
+<h2 id="see_also">See also</h2>
 
-  <ol>
+<ul>
+ <li>{{Interwiki("wikipedia", "Data type")}} on Wikipedia</li>
+ <li><a href="/en-US/docs/Web/JavaScript/Data_structures">JavaScript data types</a></li>
+ <li><a href="/en-US/docs/Glossary">Glossary</a>
+  <ul>
    <li>{{Glossary("JavaScript")}}</li>
    <li>{{Glossary("string")}}</li>
    <li>{{Glossary("number")}}</li>
@@ -27,9 +29,7 @@ tags:
    <li>{{Glossary("null")}}</li>
    <li>{{Glossary("undefined")}}</li>
    <li>{{Glossary("symbol")}}</li>
-  </ol>
+  </ul>
  </li>
- <li>{{Interwiki("wikipedia", "Data type")}} on Wikipedia</li>
- <li><a href="/en-US/docs/Web/JavaScript/Data_structures">JavaScript data types</a></li>
-</ol>
-</section>
+</ul>
+
