--- a/files/en-us/glossary/type_coercion/index.html
+++ b/files/en-us/glossary/type_coercion/index.html
@@ -22,18 +22,14 @@ console.log(sum);</pre>
 
 <pre class="brush: js">sum = Number(value1) + value2;</pre>
 
-<section id="Quick_links">
-<ol>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{Glossary("Type")}}</li>
-   <li>{{Glossary("Type conversion")}}</li>
-  </ol>
- </li>
- <li>Wikipedia article
-  <ol>
-   <li>{{Interwiki("wikipedia", "Type conversion")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+<h2 id="see_also">See also</h2>
+
+<ul>
+  <li>{{Interwiki("wikipedia", "Type conversion")}} (Wikipedia)</li>
+  <li><a href="/en-US/docs/Glossary">Glossary</a>
+    <ul>
+     <li>{{Glossary("Type")}}</li>
+     <li>{{Glossary("Type conversion")}}</li>
+    </ul>
+   </li>
+</ul>
