--- a/files/en-us/glossary/whitespace/index.html
+++ b/files/en-us/glossary/whitespace/index.html
@@ -18,29 +18,21 @@ tags:
 
 <p>The <a href="https://tc39.es/ecma262/#sec-white-space">ECMAScript Language Specification</a> defines several Unicode codepoints as “white space”: U+0009 CHARACTER TABULATION &lt;TAB&gt;, U+000B LINE TABULATION &lt;VT&gt;, U+000C FORM FEED &lt;FF&gt;, U+0020 SPACE &lt;SP&gt;, U+00A0 NO-BREAK SPACE &lt;NBSP&gt;, U+FEFF ZERO WIDTH NO-BREAK SPACE &lt;ZWNBSP&gt;, and any other Unicode “Space_Separator” code points &lt;USP&gt;.</p>
 
-<section id="Quick_links">
-<ol>
- <li>Specifications
-  <ol>
-   <li><a href="https://infra.spec.whatwg.org/#ascii-whitespace">ASCII whitespace</a></li>
-   <li><a href="https://tc39.es/ecma262/#sec-white-space">ECMAScript Language Specification</a></li>
-  </ol>
- </li>
- <li>References
-  <ol>
-   <li><a href="/en-US/docs/Web/API/Document_Object_Model/Whitespace">How whitespace is handled by HTML, CSS, and in the DOM</a></li>
-   <li>{{cssxref("white-space")}}</li>
-  </ol>
- </li>
- <li>Wikipedia articles
-  <ol>
-   <li>{{interwiki("wikipedia", "Whitespace character")}}</li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{Glossary("Character")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+<h2 id="see_also">See also</h2>
+
+<ul>
+  <li>{{interwiki("wikipedia", "Whitespace character")}} (Wikipedia)</li>
+  <li><a href="/en-US/docs/Web/API/Document_Object_Model/Whitespace">How whitespace is handled by HTML, CSS, and in the DOM</a></li>
+  <li>{{cssxref("white-space")}}</li>
+  <li>Specifications
+    <ul>
+      <li><a href="https://infra.spec.whatwg.org/#ascii-whitespace">ASCII whitespace spec</a></li>
+      <li><a href="https://tc39.es/ecma262/#sec-white-space">ECMAScript Language Specification</a></li>
+    </ul>
+  </li>
+  <li><a href="/en-US/docs/Glossary">Glossary</a>
+    <ol>
+     <li>{{Glossary("Character")}}</li>
+    </ol>
+  </li>
+</ul>
