--- a/files/en-us/glossary/adobe_flash/index.html
+++ b/files/en-us/glossary/adobe_flash/index.html
@@ -10,8 +10,9 @@ tags:
 ---
 <p>Flash is a deprecated technology developed by Adobe for viewing expressive web applications, multimedia content, and streaming media. Adobe Flash can run from supporting {{Glossary("Browser","web browsers")}} via a browser plug-in.</p>
 
-<section id="Quick_links">
-<ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
  <li><a href="https://www.adobe.com/products/flashruntimes.html">Official web site</a></li>
  <li><a href="https://mozilla.github.io/shumway/">Shumway, a free implementation by Mozilla</a></li>
  <li><a href="http://gnashdev.org/">Gnash, a free implementation by GNU</a></li>
@@ -21,10 +22,5 @@ tags:
    <li>{{Glossary("Browser")}}</li>
   </ol>
  </li>
- <li>Wikipedia article
-  <ol>
-   <li>{{Interwiki("wikipedia", "Adobe Flash")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+ <li>{{Interwiki("wikipedia", "Adobe Flash")}} (Wikipedia)</li>
+</ul>
