--- a/files/en-us/glossary/ajax/index.html
+++ b/files/en-us/glossary/ajax/index.html
@@ -14,20 +14,20 @@ tags:
 
 <p>With interactive websites and modern web standards, Ajax is gradually being replaced by functions within JavaScript frameworks and the official {{domxref("Fetch API")}} Standard.</p>
 
-<section id="Quick_links">
-<ul>
- <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>:
+<h2 id="see_also">See also</h2>
 
+<ul>
+ <li>{{interwiki("wikipedia", "AJAX")}} on Wikipedia</li>
+ <li><a href="/en-US/docs/Web/Guide/AJAX">Ajax</a></li>
+ <li><a href="/en-US/docs/Web/Guide/AJAX/Getting_Started">Ajax - Getting started</a></li> 
+ <li><a href="/en-US/docs/Glossary">Glossary</a>:
   <ul>
    <li>{{Glossary("XHR_(XMLHttpRequest)","XMLHttpRequest")}}</li>
   </ul>
  </li>
- <li>{{interwiki("wikipedia", "AJAX")}} on Wikipedia</li>
- <li><a href="/en-US/docs/Web/Guide/AJAX">Ajax</a></li>
- <li><a href="/en-US/docs/Web/Guide/AJAX/Getting_Started">Ajax - Getting started</a></li>
  <li>{{DOMxRef("XMLHttpRequest")}}</li>
  <li>{{DOMxRef("Fetch API")}}</li>
  <li><a href="/en-US/docs/Web/API/Fetch_API/Using_Fetch">Using Fetch API</a></li>
  <li><a href="https://peoplesofttutorial.com/difference-between-synchronous-and-asynchronous-messaging/">Synchronous vs. Asynchronous Communications</a></li>
 </ul>
-</section>
+
