--- a/files/en-us/glossary/blink/index.html
+++ b/files/en-us/glossary/blink/index.html
@@ -9,23 +9,19 @@ tags:
 ---
 <p>Blink is an open-source browser layout engine developed by Google as part of Chromium (and therefore part of {{glossary("Google Chrome", "Chrome")}} as well). Specifically, Blink began as a fork of the WebCore library in {{glossary("WebKit")}}, which handles layout, rendering, and {{glossary("DOM")}}, but now stands on its own as a separate {{glossary("rendering engine")}}.</p>
 
-<section id="Quick_links">
-<ol>
- <li>General knowledge
-  <ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
    <li>Blink project <a href="https://www.chromium.org/blink">home page</a></li>
    <li><a href="https://en.wikipedia.org/wiki/Blink_(browser_engine)">Blink</a> on Wikipedia</li>
    <li><a href="https://www.chromium.org/blink/developer-faq">FAQ</a> on Blink</li>
-  </ol>
- </li>
  <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
+  <ul>
    <li>{{glossary("Google Chrome")}}</li>
    <li>{{glossary("Gecko")}}</li>
    <li>{{glossary("Trident")}}</li>
    <li>{{glossary("WebKit")}}</li>
    <li>{{glossary("Rendering engine")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+  </ul>
+</ul>
+
