--- a/files/en-us/glossary/bootstrap/index.html
+++ b/files/en-us/glossary/bootstrap/index.html
@@ -12,10 +12,12 @@ tags:
 
 <p>Initially, Bootstrap was called Twitter Blueprint and was developed by a team working at <a href="https://twitter.com/">Twitter</a>. It supports responsive design and features predefined design templates that you can use out of the box, or customize for your needs with your code. You don't need to worry about compatibility with other browsers either, as Bootstrap is compatible with all modern browsers and newer versions of {{glossary("Microsoft Internet Explorer", "Internet Explorer")}}.</p>
 
-<section id="Quick_links">
-<ol>
+
+<h2 id="see_also">See also</h2>
+
+<ul>
  <li>{{interwiki("wikipedia", "Bootstrap (front-end framework)", "Bootstrap")}} on Wikipedia</li>
  <li><a href="https://getbootstrap.com/">Download Bootstrap</a></li>
  <li><a href="https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp">Get started with the latest version</a></li>
-</ol>
-</section>
+</ul>
+
