--- a/files/en-us/glossary/cacheable/index.html
+++ b/files/en-us/glossary/cacheable/index.html
@@ -17,7 +17,7 @@ tags:
 
 <p>When both, the method of the request and the status of the response, are cacheable, the response to the request can be cached:</p>
 
-<pre class="brush: plain">GET /pageX.html HTTP/1.1
+<pre class="brush: http">GET /pageX.html HTTP/1.1
 (…)
 
 200 OK
@@ -26,7 +26,7 @@ tags:
 
 <p>A {{HTTPMethod("PUT")}} request cannot be cached. Moreover, it invalidates cached data for request to the same URI done via {{HTTPMethod("HEAD")}} or {{HTTPMethod("GET")}}:</p>
 
-<pre class="brush: plain">PUT /pageX.html HTTP/1.1
+<pre class="brush: http">PUT /pageX.html HTTP/1.1
 (…)
 
 200 OK
@@ -35,25 +35,17 @@ tags:
 
 <p>A specific {{HTTPHeader("Cache-Control")}} header in the response can prevent caching:</p>
 
-<pre class="brush: plain">GET /pageX.html HTTP/1.1
+<pre class="brush: http">GET /pageX.html HTTP/1.1
 (…)
 
 200 OK
 Cache-Control: no-cache
 (…)</pre>
 
-<section id="Quick_links">
-<ol>
- <li>General knowledge
-  <ol>
-   <li>Definition of <a href="https://datatracker.ietf.org/doc/html/rfc7231#section-4.2.3">cacheable</a> in the HTTP specification.</li>
-  </ol>
- </li>
- <li>Technical knowledge
-  <ol>
-   <li>Description of common cacheable methods: {{HTTPMethod("GET")}}, {{HTTPMethod("HEAD")}}</li>
-   <li>Description of common non-cacheable methods: {{HTTPMethod("PUT")}}, {{HTTPMethod("DELETE")}}, often {{HTTPMethod("POST")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+<h2 id="see_also">See also</h2>
+
+<ul>
+  <li>Definition of <a href="https://datatracker.ietf.org/doc/html/rfc7231#section-4.2.3">cacheable</a> in the HTTP specification.</li>
+  <li>Description of common cacheable methods: {{HTTPMethod("GET")}}, {{HTTPMethod("HEAD")}}</li>
+  <li>Description of common non-cacheable methods: {{HTTPMethod("PUT")}}, {{HTTPMethod("DELETE")}}, often {{HTTPMethod("POST")}}</li>
+</ul>
