--- a/files/en-us/glossary/cipher/index.html
+++ b/files/en-us/glossary/cipher/index.html
@@ -22,28 +22,25 @@ tags:
  <li><a href="https://en.wikipedia.org/wiki/Asymmetric_key_algorithm">asymmetric key</a> algorithms use a different key for encryption and decryption.</li>
 </ul>
 
-<section id="Quick_links">
-<ol>
- <li>General knowledge
-  <ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
    <li>{{Interwiki("wikipedia", "Cipher")}} on Wikipedia</li>
    <li><a href="/en-US/docs/Archive/Security/Encryption_and_Decryption">Encryption and Decryption</a></li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
-  <ol>
-   <li>{{Glossary("Block cipher mode of operation")}}</li>
-   <li>{{Glossary("Cipher")}}</li>
-   <li>{{Glossary("Ciphertext")}}</li>
-   <li>{{Glossary("Cipher suite")}}</li>
-   <li>{{Glossary("Cryptanalysis")}}</li>
-   <li>{{Glossary("Cryptography")}}</li>
-   <li>{{Glossary("Decryption")}}</li>
-   <li>{{Glossary("Encryption")}}</li>
-   <li>{{Glossary("Key")}}</li>
-   <li>{{Glossary("Plaintext")}}</li>
-   <li>{{Glossary("Public-key cryptography")}}</li>
-   <li>{{Glossary("Symmetric-key cryptography")}}</li>
-  </ol>
- </li>
-</ol></section>
+  <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
+    <ul>
+    <li>{{Glossary("Block cipher mode of operation")}}</li>
+    <li>{{Glossary("Cipher")}}</li>
+    <li>{{Glossary("Ciphertext")}}</li>
+    <li>{{Glossary("Cipher suite")}}</li>
+    <li>{{Glossary("Cryptanalysis")}}</li>
+    <li>{{Glossary("Cryptography")}}</li>
+    <li>{{Glossary("Decryption")}}</li>
+    <li>{{Glossary("Encryption")}}</li>
+    <li>{{Glossary("Key")}}</li>
+    <li>{{Glossary("Plaintext")}}</li>
+    <li>{{Glossary("Public-key cryptography")}}</li>
+    <li>{{Glossary("Symmetric-key cryptography")}}</li>
+    </ul>
+  </li>
+</ul>
