--- a/files/en-us/glossary/graceful_degradation/index.html
+++ b/files/en-us/glossary/graceful_degradation/index.html
@@ -12,17 +12,17 @@ tags:
 
 <p>It is a useful technique that allows Web developers to focus on developing the best possible websites, given that those websites are accessed by multiple unknown user-agents. {{Glossary("Progressive enhancement")}} is related but different — often seen as going in the opposite direction to graceful degradation. In reality both approaches are valid and can often complement one another.</p>
 
-<section id="Quick_links">
-<ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
  <li>{{Interwiki("wikipedia", "Graceful degradation")}} on Wikipedia</li>
  <li><a href="/en-US/docs/Learn/Tools_and_testing/Cross_browser_testing/HTML_and_CSS">Handling common HTML and CSS problems</a></li>
  <li><a href="/en-US/docs/Learn/Tools_and_testing/Cross_browser_testing/Feature_detection">Implementing feature detection</a></li>
  <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
-  <ol>
+  <ul>
    <li>{{Glossary("Graceful degradation")}}</li>
    <li>{{Glossary("Polyfill")}}</li>
    <li>{{Glossary("Progressive enhancement")}}</li>
-  </ol>
+  </ul>
  </li>
-</ol>
-</section>
+</ul>
