--- a/files/en-us/glossary/http_2/index.html
+++ b/files/en-us/glossary/http_2/index.html
@@ -15,19 +15,16 @@ tags:
 
 <p>HTTP/2 does not modify the application semantics of HTTP in any way. All the core concepts found in HTTP 1.1, such as HTTP methods, status codes, URIs, and header fields, remain in place. Instead, HTTP/2 modifies how the data is formatted (framed) and transported between the client and server, both of which manage the entire process, and hides application complexity within the new framing layer. As a result, all existing applications can be delivered without modification.</p>
 
-<section id="Quick_links">
-<ol>
- <li>General knowledge
-  <ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
    <li><a href="/en-US/docs/Web/HTTP">HTTP on MDN</a></li>
    <li>{{interwiki("wikipedia", "HTTP/2", "HTTP/2")}} on Wikipedia</li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{glossary("HTTP")}}</li>
-   <li>{{glossary("Latency")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+    <li><a href="/en-US/docs/Glossary">Glossary</a>
+      <ul>
+      <li>{{glossary("HTTP")}}</li>
+      <li>{{glossary("Latency")}}</li>
+      </ul>
+    </li>
+</ul>
+
