--- a/files/en-us/glossary/http_header/index.html
+++ b/files/en-us/glossary/http_header/index.html
@@ -56,30 +56,23 @@ X-Cache-Info: cached
   </div>
   
 
-<section id="Quick_links">
-<ol>
- <li>Specifications
-  <ol>
-   <li>Syntax of <a href="https://datatracker.ietf.org/doc/html/rfc7230#section-3.2">headers</a> in the HTTP specification.</li>
-  </ol>
- </li>
- <li>Technical Reference
-  <ol>
+  <h2 id="see_also">See also</h2>
+
+  <ul>
    <li><a href="/en-US/docs/Web/HTTP/Headers">List of all HTTP headers</a></li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{Glossary("HTTP header")}}</li>
-   <li>{{Glossary("Request header")}}</li>
-   <li>{{Glossary("Response header")}}</li>
-   <li>{{Glossary("Representation header")}}</li>
-   <li>{{Glossary("Fetch metadata request header")}}</li>
-   <li>{{Glossary("Forbidden header name")}}</li>
-   <li>{{Glossary("Forbidden response header name")}}</li>
-   <li>{{Glossary("CORS-safelisted request header")}}</li>
-   <li>{{Glossary("CORS-safelisted response header")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+   <li>Syntax of <a href="https://datatracker.ietf.org/doc/html/rfc7230#section-3.2">headers</a> in the HTTP specification</li>  
+    <li><a href="/en-US/docs/Glossary">Glossary</a>
+      <ul>
+      <li>{{Glossary("HTTP header")}}</li>
+      <li>{{Glossary("Request header")}}</li>
+      <li>{{Glossary("Response header")}}</li>
+      <li>{{Glossary("Representation header")}}</li>
+      <li>{{Glossary("Fetch metadata request header")}}</li>
+      <li>{{Glossary("Forbidden header name")}}</li>
+      <li>{{Glossary("Forbidden response header name")}}</li>
+      <li>{{Glossary("CORS-safelisted request header")}}</li>
+      <li>{{Glossary("CORS-safelisted response header")}}</li>
+      </ul>
+    </li>
+  </ul>
+
