--- a/files/en-us/glossary/https/index.html
+++ b/files/en-us/glossary/https/index.html
@@ -9,21 +9,17 @@ tags:
 ---
 <p><strong>HTTPS</strong> (<strong><em>HyperText Transfer Protocol Secure</em></strong>) is an encrypted version of the {{Glossary("HTTP")}} protocol. It uses {{Glossary("SSL")}} or {{Glossary("TLS")}} to encrypt all communication between a client and a server. This secure connection allows clients to safely exchange sensitive data with a server, such as when performing banking activities or online shopping.</p>
 
-<section id="Quick_links">
-<ol>
- <li>General knowledge
-  <ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
    <li>{{Interwiki("wikipedia", "HTTPS")}} on Wikipedia</li>
    <li><a href="https://movingtohttps.com/">Moving to HTTPS community guide</a></li>
    <li><a href="/en-US/docs/Web/Security/Secure_Contexts">Secure Contexts</a></li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
-  <ol>
-   <li>{{glossary("HTTP")}}</li>
-   <li>{{glossary("SSL")}}</li>
-   <li>{{glossary("TLS")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+    <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
+      <ul>
+      <li>{{glossary("HTTP")}}</li>
+      <li>{{glossary("SSL")}}</li>
+      <li>{{glossary("TLS")}}</li>
+      </ul>
+    </li>   
+</ul>
