--- a/files/en-us/glossary/input_method_editor/index.html
+++ b/files/en-us/glossary/input_method_editor/index.html
@@ -12,17 +12,13 @@ tags:
  <li>to enter text on a touch screen using handwriting recognition</li>
 </ul>
 
-<section id="Quick_links">
-<ol>
- <li>Wikipedia articles
-  <ol>
-   <li>{{Interwiki("wikipedia", "Input method")}}</li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{Glossary("I18N")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+<h2 id="see_also">See also</h2>
+
+<ul>
+  <li>{{Interwiki("wikipedia", "Input method")}}</li>
+  <li><a href="/en-US/docs/Glossary">Glossary</a>
+   <ul>
+    <li>{{Glossary("I18N")}}</li>
+   </ul>
+  </li>
+</ul>
