--- a/files/en-us/glossary/key/index.html
+++ b/files/en-us/glossary/key/index.html
@@ -12,27 +12,24 @@ tags:
 
 <p>In {{Glossary("symmetric-key cryptography")}}, the same key is used for both encryption and decryption. In {{Glossary("public-key cryptography")}}, there exists a pair of related keys known as the <em>public key</em> and <em>private key</em>. The public key is freely available, whereas the private key is kept secret. The public key is able to encrypt messages that only the corresponding private key is able to decrypt, and vice versa.</p>
 
-<section id="Quick_links">
-<ol>
- <li>General knowledge
-  <ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
    <li><a href="https://en.wikipedia.org/wiki/Kerckhoffs%27s_principle">Kerckhoffs's principle</a> on Wikipedia</li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
-  <ol>
-   <li>{{Glossary("Block cipher mode of operation")}}</li>
-   <li>{{Glossary("Cipher")}}</li>
-   <li>{{Glossary("Ciphertext")}}</li>
-   <li>{{Glossary("Cipher suite")}}</li>
-   <li>{{Glossary("Cryptanalysis")}}</li>
-   <li>{{Glossary("Cryptography")}}</li>
-   <li>{{Glossary("Decryption")}}</li>
-   <li>{{Glossary("Encryption")}}</li>
-   <li>{{Glossary("Key")}}</li>
-   <li>{{Glossary("Plaintext")}}</li>
-   <li>{{Glossary("Public-key cryptography")}}</li>
-   <li>{{Glossary("Symmetric-key cryptography")}}</li>
-  </ol>
- </li>
-</ol></section>
+   <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
+    <ul>
+    <li>{{Glossary("Block cipher mode of operation")}}</li>
+    <li>{{Glossary("Cipher")}}</li>
+    <li>{{Glossary("Ciphertext")}}</li>
+    <li>{{Glossary("Cipher suite")}}</li>
+    <li>{{Glossary("Cryptanalysis")}}</li>
+    <li>{{Glossary("Cryptography")}}</li>
+    <li>{{Glossary("Decryption")}}</li>
+    <li>{{Glossary("Encryption")}}</li>
+    <li>{{Glossary("Key")}}</li>
+    <li>{{Glossary("Plaintext")}}</li>
+    <li>{{Glossary("Public-key cryptography")}}</li>
+    <li>{{Glossary("Symmetric-key cryptography")}}</li>
+    </ul>
+  </li>
+</ul>
