--- a/files/en-us/glossary/lossless_compression/index.html
+++ b/files/en-us/glossary/lossless_compression/index.html
@@ -14,16 +14,15 @@ tags:
 
 <p>{{glossary("Lossy compression")}}, on the other hand, uses inexact approximations by discarding some data from the original file, making it an irreversible compression method.</p>
 
-<section id="Quick_links">
-<ol>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
+<h2 id="see_also">See also</h2>
 
-  <ol>
+<ul>
+ <li><a href="/en-US/docs/Glossary">Glossary</a>
+  <ul>
    <li>{{glossary("GZIP")}}</li>
    <li>{{glossary("Brotli")}}</li>
    <li>{{glossary("PNG")}}</li>
    <li>{{glossary("Lossy compression")}}</li>
-  </ol>
+  </ul>
  </li>
-</ol>
-</section>
+</ul>
