--- a/files/en-us/glossary/main_thread/index.html
+++ b/files/en-us/glossary/main_thread/index.html
@@ -10,19 +10,16 @@ tags:
 
 <p>Unless intentionally using a <a href="/en-US/docs/Web/API/Web_Workers_API/Using_web_workers">web worker</a>, such as a <a href="/en-US/docs/Web/API/Service_Worker_API/Using_Service_Workers">service worker</a>, JavaScript runs on the main thread, so it's easy for a script to cause delays in event processing or painting. The less work required of the main thread, the more that thread can respond to user events, paint, and generally be responsive to the user.</p>
 
-<section id="Quick_links">
-<ol>
- <li>See also
-  <ol>
+<h2 id="see_also">See also</h2>
+
+<ul>
    <li><a href="/en-US/docs/Learn/JavaScript/Asynchronous">Asynchronous JavaScript</a></li>
    <li><a href="/en-US/docs/Web/API/Web_Workers_API">Web worker API</a></li>
    <li><a href="/en-US/docs/Web/API/Service_Worker_API">Service worker API</a></li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{Glossary("Thread")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+   <li><a href="/en-US/docs/Glossary">Glossary</a>
+    <ul>
+     <li>{{Glossary("Thread")}}</li>
+    </ul>
+   </li>
+</ul>
+
