--- a/files/en-us/glossary/mathml/index.html
+++ b/files/en-us/glossary/mathml/index.html
@@ -10,18 +10,11 @@ tags:
 ---
 <p><strong>MathML </strong>(an {{glossary("XML")}} application) is an open standard for representing mathematical expressions in webpages.  In 1998 the W3C first recommended MathML for representing mathematical expressions in the {{glossary("browser")}}. MathML has other applications also including scientific content and voice synthesis.</p>
 
-<section id="Quick_links">
-<ol>
- <li>General knowledge
-  <ol>
- <li>{{interwiki("wikipedia", "MathML", "MathML")}} on Wikipedia</li>
-  </ol>
- </li>
- <li>Technical reference
-  <ol>
-   <li><a href="/en-US/docs/Web/MathML">MathML</a></li>
-   <li><a href="/en-US/docs/Web/MathML/Authoring">Authoring MathML</a></li>
-   <li>{{spec("http://www.w3.org/Math/whatIsMathML.html", "MathML", "REC")}}</li>
-  </ol>
- </li>
-</ol></section>
+<h2 id="see_also">See also</h2>
+
+<ul>
+  <li>{{interwiki("wikipedia", "MathML", "MathML")}} on Wikipedia</li>
+  <li><a href="/en-US/docs/Web/MathML">MathML</a></li>
+  <li><a href="/en-US/docs/Web/MathML/Authoring">Authoring MathML</a></li>
+  <li>{{spec("http://www.w3.org/Math/whatIsMathML.html", "MathML", "REC")}}</li>
+</ul>
