--- a/files/en-us/glossary/microsoft_edge/index.html
+++ b/files/en-us/glossary/microsoft_edge/index.html
@@ -8,22 +8,19 @@ tags:
 ---
 <p><strong>Microsoft Edge</strong> is a free-of-cost graphical {{glossary("World Wide Web", "Web")}} {{Glossary("browser")}} bundled with Windows 10 and developed by Microsoft since 2014. Initially known as Spartan, Edge replaced the longstanding browser {{glossary("Microsoft Internet Explorer","Internet Explorer")}}.</p>
 
-<section id="Quick_links">
-<ol>
- <li>See also
-  <ol>
-   <li><a href="https://www.microsoft.com/edge">Official website</a></li>
-  </ol>
- </li>
+<h2 id="see_also">See also</h2>
+
+<ul>
+ <li><a href="https://www.microsoft.com/edge">Official website</a></li>
  <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
-  <ol>
+  <ul>
    <li>{{Glossary("Google Chrome")}}</li>
    <li>{{Glossary("Microsoft Edge")}}</li>
    <li>{{Glossary("Microsoft Internet Explorer")}}</li>
    <li>{{Glossary("Mozilla Firefox")}}</li>
    <li>{{Glossary("Netscape Navigator")}}</li>
    <li>{{Glossary("Opera Browser")}}</li>
-  </ol>
+  </ul>
  </li>
-</ol>
-</section>
+</ul>
+
