--- a/files/en-us/glossary/null/index.html
+++ b/files/en-us/glossary/null/index.html
@@ -13,10 +13,13 @@ tags:
 
 <pre class="brush: js">typeof null === 'object' // true</pre>
 
-<section id="Quick_links">
-<ul>
- <li><strong><a href="/en-US/docs/Glossary">Glossary</a></strong>
+<h2 id="see_also">See also</h2>
 
+<ul>
+ <li><a href="/en-US/docs/Web/JavaScript/Data_structures">JavaScript data types</a></li>
+ <li>The JavaScript global object: {{jsxref("null")}}</li>
+ <li>{{Interwiki("wikipedia", "Null pointer")}} on Wikipedia</li>  
+ <li><strong><a href="/en-US/docs/Glossary">Glossary</a></strong>
   <ul>
    <li>{{Glossary("JavaScript")}}</li>
    <li>{{Glossary("string")}}</li>
@@ -28,8 +31,5 @@ tags:
    <li>{{Glossary("symbol")}}</li>
   </ul>
  </li>
- <li><a href="/en-US/docs/Web/JavaScript/Data_structures">JavaScript data types</a></li>
- <li>The JavaScript global object: {{jsxref("null")}}</li>
- <li>{{Interwiki("wikipedia", "Null pointer")}} on Wikipedia</li>
 </ul>
-</section>
+
