--- a/files/en-us/glossary/pop/index.html
+++ b/files/en-us/glossary/pop/index.html
@@ -10,7 +10,8 @@ tags:
 
 <p>Clients usually retrieve all messages and then delete them from the server, but POP3 does allow retaining a copy on the server. Nearly all email servers and clients currently support POP3.</p>
 
-<section id="Quick_links">
+<h2 id="see_also">See also</h2>
+
 <ul>
  <li>{{Interwiki("wikipedia", "Post Office Protocol", "POP")}} on Wikipedia</li>
  <li><a href="https://datatracker.ietf.org/doc/html/rfc1734">RFC 1734</a> (Specification of POP3 authentication mechanism)</li>
@@ -21,4 +22,4 @@ tags:
    <li>{{Glossary("IMAP")}}</li>
   </ul>
  </li>
-</ul></section>
+</ul>
