--- a/files/en-us/glossary/reporting_directive/index.html
+++ b/files/en-us/glossary/reporting_directive/index.html
@@ -13,25 +13,24 @@ tags:
 
 <p>See <a href="/en-US/docs/Web/HTTP/Headers/Content-Security-Policy#reporting_directives">Reporting directives</a> for a complete list.</p>
 
-<section id="Quick_links">
-<ol>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
+<h2 id="see_also">See also</h2>
 
-  <ol>
+<ul>
+ <li><a href="/en-US/docs/Glossary">Glossary</a>
+  <ul>
    <li>{{Glossary("CSP")}}</li>
    <li>{{Glossary("Fetch directive")}}</li>
    <li>{{Glossary("Document directive")}}</li>
    <li>{{Glossary("Navigation directive")}}</li>
-  </ol>
+  </ul>
  </li>
  <li>Reference
-  <ol>
+  <ul>
    <li><a href="https://www.w3.org/TR/CSP/#directives-reporting">https://www.w3.org/TR/CSP/#directives-reporting</a></li>
    <li>{{HTTPHeader("Content-Security-Policy/upgrade-insecure-requests", "upgrade-insecure-requests")}}</li>
    <li>{{HTTPHeader("Content-Security-Policy/block-all-mixed-content", "block-all-mixed-content")}}</li>
    <li>{{HTTPHeader("Content-Security-Policy/require-sri-for", "require-sri-for")}} {{deprecated_inline}}</li>
    <li>{{HTTPHeader("Content-Security-Policy")}}</li>
-  </ol>
+  </ul>
  </li>
-</ol>
-</section>
+</ul>
