--- a/files/en-us/glossary/simd/index.html
+++ b/files/en-us/glossary/simd/index.html
@@ -10,18 +10,14 @@ tags:
 
 <p>See also {{Glossary("SISD")}} for a sequential architecture with no parallelism in either the instructions or the data sets.</p>
 
-<section id="Quick_links">
-<ol>
- <li>General knowledge
-  <ol>
-   <li>{{Interwiki("wikipedia", "SIMD")}} on Wikipedia</li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{Glossary("SIMD")}}</li>
-   <li>{{Glossary("SISD")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+<h2 id="see_also">See also</h2>
+
+<ul>
+  <li>{{Interwiki("wikipedia", "SIMD")}} on Wikipedia</li>
+  <li><a href="/en-US/docs/Glossary">Glossary</a>
+   <ul>
+    <li>{{Glossary("SIMD")}}</li>
+    <li>{{Glossary("SISD")}}</li>
+   </ul>
+  </li>
+</ul>
