--- a/files/en-us/glossary/smtp/index.html
+++ b/files/en-us/glossary/smtp/index.html
@@ -12,21 +12,16 @@ tags:
 
 <p>The protocol is relatively straightforward. Primary complications include supporting various authentication mechanisms (<a href="https://en.wikipedia.org/wiki/Generic_Security_Services_Application_Program_Interface"><abbr title="Generic Security Services Application Program Interface">GSSAPI</abbr></a>, <a href="https://en.wikipedia.org/wiki/CRAM-MD5"><abbr title="challenge-response authentication mechanism">CRAM-MD5</abbr></a>, <a href="https://en.wikipedia.org/wiki/NTLM"><abbr title="NT LAN Manager">NTLM</abbr></a>, MSN, AUTH LOGIN, AUTH PLAIN, etc.), handling error responses, and falling back when authentication mechanisms fail (e.g., the server claims to support a mechanism, but doesn't).</p>
 
-<section id="Quick_links">
-<ol>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
+<h2 id="see_also">See also</h2>
 
-  <ol>
-   <li>{{glossary("NNTP")}}</li>
-   <li>{{glossary("POP")}}</li>
-   <li>{{glossary("protocol")}}</li>
-   <li>{{Glossary("state machine")}}</li>
-  </ol>
- </li>
- <li>Wikipedia articles
-  <ol>
-   <li>{{Interwiki("wikipedia", "SMTP")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+<ul>
+  <li>{{Interwiki("wikipedia", "SMTP")}} (Wikipedia)</li>
+  <li><a href="/en-US/docs/Glossary">Glossary</a>
+    <ul>
+     <li>{{glossary("NNTP")}}</li>
+     <li>{{glossary("POP")}}</li>
+     <li>{{glossary("protocol")}}</li>
+     <li>{{Glossary("state machine")}}</li>
+    </ul>
+   </li>
+</ul>
