--- a/files/en-us/glossary/symmetric-key_cryptography/index.html
+++ b/files/en-us/glossary/symmetric-key_cryptography/index.html
@@ -15,7 +15,8 @@ tags:
 
 <p>Most symmetric-key algorithms currently in use are block ciphers: this means that they encrypt data one block at a time. The size of each block is fixed and determined by the algorithm: for example {{Glossary("AES")}} uses 16-byte blocks. Block ciphers are always used with a <em>{{Glossary("Block cipher mode of operation", "mode")}}</em>, which specifies how to securely encrypt messages that are longer than the block size. For example, AES is a cipher, while CTR, CBC, and GCM are all modes. Using an inappropriate mode, or using a mode incorrectly, can completely undermine the security provided by the underlying cipher.</p>
 
-<section id="Quick_links">
+<h2 id="see_also">See also</h2>
+
 <ul>
  <li><a href="/en-US/docs/Glossary">MDN Web Docs Glossary</a>
   <ul>
@@ -26,4 +27,3 @@ tags:
   </ul>
  </li>
 </ul>
-</section>
