--- a/files/en-us/glossary/tcp/index.html
+++ b/files/en-us/glossary/tcp/index.html
@@ -13,24 +13,16 @@ tags:
 
 <p>TCP's role is to ensure the packets are reliably delivered, error free.  TCP has concurrence control, which means the initial requests start small, increasing in size to the levels of bandwidth the computers, servers, and network can support.</p>
 
-<section id="Quick_links">
-<ol>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{Glossary("IPv4")}}</li>
-   <li>{{Glossary("IPv6")}}</li>
-   <li>{{Glossary("Packet")}}</li>
-  </ol>
- </li>
- <li>Wikipedia article
-  <ol>
-   <li>{{Interwiki("wikipedia", "Transmission Control Protocol")}}</li>
-  </ol>
- </li>
- <li>See Also
-  <ol>
-   <li><a href="/en-US/docs/Web/HTTP/Overview">http overview</a></li>
-  </ol>
- </li>
-</ol>
-</section>
+<h2 id="see_also">See also</h2>
+
+<ul>
+  <li>{{Interwiki("wikipedia", "Transmission Control Protocol")}} (Wikipedia)</li>
+  <li><a href="/en-US/docs/Web/HTTP/Overview">HTTP Overview</a></li>
+  <li><a href="/en-US/docs/Glossary">Glossary</a>
+    <ul>
+     <li>{{Glossary("IPv4")}}</li>
+     <li>{{Glossary("IPv6")}}</li>
+     <li>{{Glossary("Packet")}}</li>
+    </ul>
+   </li>
+</ul>
