--- a/files/en-us/glossary/tls/index.html
+++ b/files/en-us/glossary/tls/index.html
@@ -16,29 +16,17 @@ tags:
 <p><strong>Note:</strong> TLS 1.0 and 1.1 support will be removed from all major browsers in early 2020; you'll need to make sure your web server supports TLS 1.2 or 1.3 going forward. From version 74 onwards, Firefox will return a <a href="https://support.mozilla.org/en-US/kb/secure-connection-failed-firefox-did-not-connect">Secure Connection Failed</a> error when connecting to servers using the older TLS versions ({{bug(1606734)}}).</p>
 </div>
 
-<section id="Quick_links">
-<ol>
- <li>Specifications
-  <ol>
-   <li><a href="https://datatracker.ietf.org/doc/html/rfc5246" rel="external">RFC 5246</a> (The Transport Layer Security Protocol, Version 1.2)</li>
-  </ol>
- </li>
- <li>Wikipedia articles
-  <ol>
-   <li>{{Interwiki("wikipedia", "Transport Layer Security")}}</li>
-  </ol>
- </li>
- <li>See also
-  <ol>
-   <li><a href="/en-US/docs/Web/Security/Transport_Layer_Security">Transport Layer Security</a></li>
-   <li><a href="https://www.owasp.org/index.php/Transport_Layer_Protection_Cheat_Sheet" rel="external">OWASP: Transport Layer Protection Cheat Sheet</a></li>
-  </ol>
- </li>
- <li><a href="/en-US/docs/Glossary">Glossary</a>
-  <ol>
-   <li>{{Glossary("HTTPS")}}</li>
-   <li>{{Glossary("SSL")}}</li>
-  </ol>
- </li>
-</ol>
-</section>
+<h2 id="see_also">See also</h2>
+
+<ul>
+  <li>{{Interwiki("wikipedia", "Transport Layer Security")}} (Wikipedia)</li>
+  <li><a href="https://datatracker.ietf.org/doc/html/rfc5246">RFC 5246</a> (The Transport Layer Security Protocol, Version 1.2)</li>
+  <li><a href="/en-US/docs/Web/Security/Transport_Layer_Security">Transport Layer Security</a></li>
+  <li><a href="https://www.owasp.org/index.php/Transport_Layer_Protection_Cheat_Sheet">OWASP: Transport Layer Protection Cheat Sheet</a></li>
+  <li><a href="/en-US/docs/Glossary">Glossary</a>
+    <ul>
+     <li>{{Glossary("HTTPS")}}</li>
+     <li>{{Glossary("SSL")}}</li>
+    </ul>
+  </li>
+</ul>
