--- a/files/en-us/glossary/web_server/index.html
+++ b/files/en-us/glossary/web_server/index.html
@@ -7,9 +7,10 @@ tags:
 ---
 <p>A web server is a piece of software that often runs on a hardware server offering service to a user, usually referred to as the client. A server, on the other hand, is a piece of hardware that lives in a room full of computers, commonly known as a data center.</p>
 
-<section id="Quick_links">
+<h2 id="see_also">See also</h2>
+
 <ul>
  <li><a href="/en-US/docs/Learn/Common_questions/What_is_a_web_server">Introduction to servers</a></li>
  <li>{{Interwiki("wikipedia", "Server (computing)")}} on Wikipedia</li>
 </ul>
-</section>
+>
