Remove rel=external from links

--- a/files/en-us/glossary/apple_safari/index.html
+++ b/files/en-us/glossary/apple_safari/index.html
@@ -12,8 +12,8 @@ tags:
 
 <ul>
  <li>{{Interwiki("wikipedia", "Safari (web browser)", "Safari")}} on Wikipedia</li>
- <li><a href="https://www.apple.com/safari/" rel="external">Safari on apple.com</a></li>
+ <li><a href="https://www.apple.com/safari/">Safari on apple.com</a></li>
  <li><a href="https://webkit.org/">The WebKit project</a></li>
- <li><a href="https://nightly.webkit.org/" rel="external">WebKit nightly build</a></li>
- <li><a href="https://bugs.webkit.org/" rel="external">Reporting a bug for Safari</a></li>
+ <li><a href="https://nightly.webkit.org/">WebKit nightly build</a></li>
+ <li><a href="https://bugs.webkit.org/">Reporting a bug for Safari</a></li>
 </ul>
