--- a/files/en-us/glossary/browser/index.html
+++ b/files/en-us/glossary/browser/index.html
@@ -11,15 +11,15 @@ tags:
 
 <ul>
   <li>{{Interwiki("wikipedia", "Web browser")}} on Wikipedia</li>
-  <li><a href="http://www.evolutionoftheweb.com/" rel="external">The evolution of the web</a></li>
+  <li><a href="http://www.evolutionoftheweb.com/">The evolution of the web</a></li>
   <li>{{Glossary("user agent")}} (Glossary)</li>
   <li>{{HTTPHeader("User-agent")}} (HTTP Header)</li>
   <li>Download a browser
     <ul>
     <li><a href="https://www.mozilla.org/en-US/firefox/">Mozilla Firefox</a></li>
-    <li><a href="https://www.google.com/chrome/" rel="external">Google Chrome</a></li>
-    <li><a href="https://www.microsoft.com/en-us/edge" rel="external">Microsoft Edge</a></li>
-    <li><a href="https://www.opera.com/" rel="external">Opera Browser</a></li>
+    <li><a href="https://www.google.com/chrome/">Google Chrome</a></li>
+    <li><a href="https://www.microsoft.com/en-us/edge">Microsoft Edge</a></li>
+    <li><a href="https://www.opera.com/">Opera Browser</a></li>
     </ul>
   </li>
 </ul>
