--- a/files/en-us/glossary/canvas/index.html
+++ b/files/en-us/glossary/canvas/index.html
@@ -20,5 +20,5 @@ tags:
  <li>The HTML {{HTMLElement("canvas")}} element on MDN</li>
  <li><a href="/en-US/docs/Web/API/Canvas_API">The Canvas general documentation on MDN</a></li>
  <li>{{domxref("CanvasRenderingContext2D")}}: The canvas 2D drawing API</li>
- <li><a href="https://www.w3.org/TR/2dcontext/" rel="external">The Canvas 2D API specification</a></li>
+ <li><a href="https://www.w3.org/TR/2dcontext/">The Canvas 2D API specification</a></li>
 </ul>
