--- a/files/en-us/glossary/certificate_authority/index.html
+++ b/files/en-us/glossary/certificate_authority/index.html
@@ -21,5 +21,5 @@ tags:
 <ul>
  <li><a href="https://en.wikipedia.org/wiki/Certificate_authority">Certificate authority</a> on Wikipedia</li>
  <li><a href="https://en.wikipedia.org/wiki/Public_key_infrastructure">Public key infrastructure</a> on Wikipedia</li>
- <li><a href="https://wiki.mozilla.org/CA/Included_Certificates" rel="external">Mozilla Included CA Certificate List</a></li>
+ <li><a href="https://wiki.mozilla.org/CA/Included_Certificates">Mozilla Included CA Certificate List</a></li>
 </ul>
