--- a/files/en-us/glossary/css/index.html
+++ b/files/en-us/glossary/css/index.html
@@ -33,5 +33,5 @@ p {
  <li><a href="/en-US/docs/Learn/CSS">Learn CSS</a></li>
  <li>{{interwiki("wikipedia", "CSS")}} on Wikipedia</li>
  <li><a href="/en-US/docs/Web/CSS">The CSS documentation on MDN</a></li>
- <li><a href="https://www.w3.org/Style/CSS/current-work" rel="external">The CSS Working Group current work</a></li>
+ <li><a href="https://www.w3.org/Style/CSS/current-work">The CSS Working Group current work</a></li>
 </ul>
