--- a/files/en-us/glossary/html/index.html
+++ b/files/en-us/glossary/html/index.html
@@ -31,7 +31,7 @@ tags:
 <ul>
  <li>{{interwiki("wikipedia", "HTML", "HTML")}} on Wikipedia</li>
  <li><a href="/en-US/docs/Learn/HTML">Our HTML tutorial </a></li>
- <li><a href="https://www.codecademy.com/learn/learn-html" rel="external">The web course on codecademy.com</a></li>
+ <li><a href="https://www.codecademy.com/learn/learn-html">The web course on codecademy.com</a></li>
  <li><a href="/en-US/docs/Web/HTML">The HTML documentation on MDN</a></li>
- <li><a href="https://www.w3.org/TR/html5/" rel="external">The HTML specification</a></li>
+ <li><a href="https://www.w3.org/TR/html5/">The HTML specification</a></li>
 </ul>
