--- a/files/en-us/glossary/javascript/index.html
+++ b/files/en-us/glossary/javascript/index.html
@@ -9,7 +9,7 @@ tags:
 ---
 <h2 id="Summary">Summary</h2>
 
-<p>JavaScript (or "JS") is a programming language used most often for dynamic client-side scripts on webpages, but it is also often used on the {{Glossary("Server","server")}}-side, using a runtime such as <a href="https://nodejs.org/" rel="external">Node.js</a>.</p>
+<p>JavaScript (or "JS") is a programming language used most often for dynamic client-side scripts on webpages, but it is also often used on the {{Glossary("Server","server")}}-side, using a runtime such as <a href="https://nodejs.org/">Node.js</a>.</p>
 
 <p>JavaScript <strong>should not</strong> be confused with the {{interwiki("wikipedia", "Java_(programming_language)", "Java programming language")}}. Although <em>"Java"</em> and <em>"JavaScript"</em> are trademarks (or registered trademarks) of Oracle in the U.S. and other countries, the two programming languages are significantly different in their syntax, semantics, and use cases.</p>
 
@@ -21,7 +21,7 @@ tags:
 
 <p>In November 1996, Netscape began working with ECMA International to make JavaScript an industry standard. Since then, the standardized JavaScript is called ECMAScript and specified under ECMA-262, whose latest (eleventh, ES2020) edition is available as of June 2020.</p>
 
-<p>Recently, JavaScript's popularity has expanded even further through the successful <a href="https://nodejs.org/" rel="external">Node.js</a> platform—the most popular cross-platform JavaScript runtime environment outside the browser. Node.js - built using <a href="https://en.wikipedia.org/wiki/V8_(JavaScript_engine)">Chrome's V8 JavaScript Engine</a> - allows developers to use JavaScript as a scripting language to automate things on a computer and build fully functional {{Glossary("HTTP")}} and {{Glossary("WebSockets")}} servers.</p>
+<p>Recently, JavaScript's popularity has expanded even further through the successful <a href="https://nodejs.org/">Node.js</a> platform—the most popular cross-platform JavaScript runtime environment outside the browser. Node.js - built using <a href="https://en.wikipedia.org/wiki/V8_(JavaScript_engine)">Chrome's V8 JavaScript Engine</a> - allows developers to use JavaScript as a scripting language to automate things on a computer and build fully functional {{Glossary("HTTP")}} and {{Glossary("WebSockets")}} servers.</p>
 
 <h2 id="see_also">See also</h2>
 
@@ -29,8 +29,8 @@ tags:
  <li>{{interwiki("wikipedia", "JavaScript", "JavaScript")}} on Wikipedia</li>
  <li>The {{Link("/en-US/docs/Web/JavaScript/Guide")}} on MDN</li>
  <li><a href="https://nodeschool.io/#workshoppers">The "javascripting" workshop on NodeSchool</a></li>
- <li><a href="https://www.codecademy.com/tracks/javascript" rel="external">The JavaScript course on codecademy.com</a></li>
- <li><a href="https://www.ecma-international.org/publications/standards/Ecma-262.htm" rel="external">The latest ECMAScript standard</a></li>
+ <li><a href="https://www.codecademy.com/tracks/javascript">The JavaScript course on codecademy.com</a></li>
+ <li><a href="https://www.ecma-international.org/publications/standards/Ecma-262.htm">The latest ECMAScript standard</a></li>
  <li>The {{Link("/en-US/docs/Web/JavaScript/reference")}} on MDN</li>
- <li><a href="https://eloquentjavascript.net/" rel="external">The <em>Eloquent JavaScript</em> book</a></li>
+ <li><a href="https://eloquentjavascript.net/">The <em>Eloquent JavaScript</em> book</a></li>
 </ul>
