--- a/files/en-us/glossary/property/css/index.html
+++ b/files/en-us/glossary/property/css/index.html
@@ -26,5 +26,5 @@ div {
 <ul>
  <li><a href="/en-US/docs/Learn/CSS">Learn CSS</a></li>
  <li><a href="/en-US/docs/Web/CSS/Reference">The CSS reference on MDN</a></li>
- <li><a href="https://www.w3.org/Style/CSS/current-work" rel="external">The CSS Working Group current work</a></li>
+ <li><a href="https://www.w3.org/Style/CSS/current-work">The CSS Working Group current work</a></li>
 </ul>
