--- a/files/en-us/glossary/accessibility/index.html
+++ b/files/en-us/glossary/accessibility/index.html
@@ -13,8 +13,8 @@ tags:
  <li><a href="/en-US/docs/Web/Accessibility">Accessibility resources at MDN</a></li>
  <li>{{Interwiki("wikipedia", "Web accessibility")}} on Wikipedia</li>
  <li><a href="/en-US/docs/Learn/Accessibility">Learn accessibility on MDN</a></li>
- <li><a href="https://webaim.org/" rel="external">Web Accessibility In Mind</a></li>
+ <li><a href="https://webaim.org/">Web Accessibility In Mind</a></li>
  <li><a href="/en-US/docs/Web/Accessibility/ARIA">The ARIA documentation on MDN</a></li>
- <li><a href="https://www.w3.org/WAI/" rel="external">The Web Accessibility Initiative homepage</a></li>
- <li><a href="https://www.w3.org/TR/wai-aria/" rel="external">The WAI-ARIA recommendation</a></li>
+ <li><a href="https://www.w3.org/WAI/">The Web Accessibility Initiative homepage</a></li>
+ <li><a href="https://www.w3.org/TR/wai-aria/">The WAI-ARIA recommendation</a></li>
 </ul>
