--- a/files/en-us/glossary/dom/index.html
+++ b/files/en-us/glossary/dom/index.html
@@ -17,7 +17,7 @@ tags:
 <ul>
  <li>{{interwiki("wikipedia", "Document_Object_Model", "The Document Object Model")}} on Wikipedia</li>
  <li><a href="/en-US/docs/Web/API/Document_Object_Model">The DOM documentation on MDN</a></li>
- <li><a href="https://dom.spec.whatwg.org/" rel="external">The DOM Standard</a></li>
+ <li><a href="https://dom.spec.whatwg.org/">The DOM Standard</a></li>
  <li><a href="/en-US/docs/Glossary">Glossary</a>
   <ul>
    <li>{{Glossary("API")}}</li>
