--- a/files/en-us/glossary/svg/index.html
+++ b/files/en-us/glossary/svg/index.html
@@ -15,7 +15,7 @@ tags:
 
 <p>Based on an {{Glossary("XML")}} syntax, SVG can be styled with {{Glossary("CSS")}} and made interactive using {{Glossary("JavaScript")}}. HTML5 now allows direct embedding of SVG {{Glossary("Tag","tags")}} in an {{Glossary("HTML")}} document.</p>
 
-<p>As a <a href="https://en.wikipedia.org/wiki/Vector_graphics" rel="external">vector image format</a>, SVG graphics can scale infinitely, making them invaluable in {{Glossary("responsive web design", "responsive design")}}, since you can create interface elements and graphics that scale to any screen size. SVG also provides a useful set of tools, such as clipping, masking, filters, and animations.</p>
+<p>As a <a href="https://en.wikipedia.org/wiki/Vector_graphics">vector image format</a>, SVG graphics can scale infinitely, making them invaluable in {{Glossary("responsive web design", "responsive design")}}, since you can create interface elements and graphics that scale to any screen size. SVG also provides a useful set of tools, such as clipping, masking, filters, and animations.</p>
 
 <h2 id="see_also">See also</h2>
 
@@ -23,5 +23,5 @@ tags:
  <li>{{Interwiki("wikipedia", "SVG")}} on Wikipedia</li>
  <li><a href="https://www.w3.org/Graphics/SVG/IG/resources/svgprimer.html">W3.org's SVG Primer</a></li>
  <li><a href="/en-US/docs/Web/SVG">SVG documentation on MDN</a></li>
- <li><a href="https://www.w3.org/TR/SVG/" rel="external">Latest SVG specification</a></li>
+ <li><a href="https://www.w3.org/TR/SVG/">Latest SVG specification</a></li>
 </ul>
