Clean up a few more old-style headings

--- a/files/en-us/glossary/udp/index.html
+++ b/files/en-us/glossary/udp/index.html
@@ -14,14 +14,9 @@ tags:
 
 <p>UDP is suitable for purposes where error checking and correction are either not necessary or are performed in the application; UDP avoids the overhead of such processing in the <a href="https://en.wikipedia.org/wiki/Protocol_stack" title="Protocol stack">protocol stack</a>. Time-sensitive applications often use UDP because dropping packets is preferable to waiting for packets delayed due to <a href="https://en.wikipedia.org/wiki/Retransmission_(data_networks)" title="Retransmission (data networks)">retransmission</a>, which may not be an option in a <a class="mw-redirect" href="https://en.wikipedia.org/wiki/Real-time_system" title="Real-time system">real-time system</a>.</p>
 
-<h3 id="General_knowledge">General knowledge</h3>
+<h2 id="see_also">See also</h2>
 
 <ul>
  <li>{{Interwiki("wikipedia", "User Datagram Protocol")}} on Wikipedia</li>
-</ul>
-
-<h3 id="Technical_reference">Technical reference</h3>
-
-<ul>
  <li><a href="https://datatracker.ietf.org/doc/html/rfc768">Specification</a></li>
 </ul>
