--- a/files/en-us/glossary/rest/index.html
+++ b/files/en-us/glossary/rest/index.html
@@ -15,16 +15,11 @@ tags:
 
 <p>HTTP APIs in general are sometimes colloquially referred to as RESTful APIs, RESTful services, or REST services, although they don't necessarily adhere to all REST constraints. Beginners can assume a REST API means an HTTP service that can be called using standard web libraries and tools.</p>
 
-<h3 id="Learn_about_it">Learn about it</h3>
+<h2 id="see_also">See also</h2>
 
 <ul>
  <li><a href="https://www.restapitutorial.com/">restapitutorial.com</a></li>
  <li><a href="https://restcookbook.com/">restcookbook.com</a></li>
-</ul>
-
-<h3 id="General_knowledge">General knowledge</h3>
-
-<ul>
  <li>{{Interwiki("wikipedia", "Representational_state_transfer", "REST")}} on Wikipedia</li>
  <li><a href="https://www.service-architecture.com/articles/web-services/representational_state_transfer_rest.html">REST Architecture</a></li>
 </ul>
